--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -57,8 +57,8 @@
           font-size: 16px;
           outline: none;
   
-          &#search {
-            background: url("/assets/pngwing.png") no-repeat;
+          #search {
+            background: "src/assets/background-images/pngwing.png" no-repeat;
             background-position: 65px;
             background-size: 14px;
   
