--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -56,17 +56,14 @@
           border: 1px solid #ced4da;
           font-size: 16px;
           outline: none;
-  
-          #search {
-            background: "src/assets/background-images/pngwing.png" no-repeat;
-            background-position: 65px;
-            background-size: 14px;
-  
-            &:focus {
+          background-repeat: no-repeat;
+          background: "src/assets/background-images/pngwing.png" no-repeat;
+          background-position: 65px;
+          background-size: 14px;
+           
+          &:focus {
               background-position: 10px;
-            }
           }
-  
           &::placeholder {
             text-align: center;
             font-size: 15px;
