--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -57,11 +57,12 @@
         font-size: 16px;
         outline: none;
         background-repeat: no-repeat;
+        background: "src/assets/background-images/pngwing.png" no-repeat;
         background-position: 65px;
         background-size: 14px;
-
+         
         &:focus {
-          background-position: 10px;
+            background-position: 10px;
         }
         &::placeholder {
           text-align: center;
