--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -20,6 +20,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
 
     .logo {
       display: flex;
