--- a/src/pages/jinsooso/Main/main.scss
+++ b/src/pages/jinsooso/Main/main.scss
@@ -17,26 +17,16 @@
   padding: 0;
 }
 
-body {
-  @include wh(100vw, 100vh);
-  // width: 100vw;
-  // height: 100vh;
-  @include flex(column, flex-start);
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: flex-start;
-  // align-items: center;
-  background-color: #fafafa;
-  nav {
-    width: 100%;
-    /* height: 60px; */
-    @include flex(row, space-evenly);
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-around;
-    // align-items: center;
-    border: 1px solid lightgrey;
-    background-color: white;
+// #nav {
+//     width: 100%;
+//     /* height: 60px; */
+//     @include flex(row, space-evenly);
+//     // display: flex;
+//     // flex-direction: row;
+//     // justify-content: space-around;
+//     // align-items: center;
+//     border: 1px solid lightgrey;
+//     background-color: white;
     #logo-container {
       width: 120px;
       margin: 10px 0;
@@ -116,7 +106,7 @@ body {
   height: 18px;
 }
 
-main {
+#main {
   @include flex(row, flex-end, flex-start);
   // display: flex;
   // flex-direction: row;
