[소진수 23기]add: Mission 1,2,3,4 완료

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -27,6 +27,7 @@
       justify-content: center;
       align-items: center;
       font-size: 25px;
+      padding-left: 20px;
 
       span {
         display: inline-block;
