--- a/src/pages/jinsooso/Main/main.scss
+++ b/src/pages/jinsooso/Main/main.scss
@@ -16,27 +16,16 @@
   background-color: #fafafa;
   #jinsoo-nav {
     width: 100%;
-    /* height: 60px; */
     @include flex(row, space-evenly);
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-around;
-    // align-items: center;
     border: 1px solid lightgrey;
     background-color: white;
     #logo-container {
       width: 120px;
       margin: 10px 0;
       @include flex(row, space-between);
-      // display: flex;
-      // flex-direction: row;
-      // justify-content: space-between;
-      // align-items: center;
       .logo-a {
         margin-top: 5px;
         @include wh(25px, 25px);
-        // width: 25px;
-        // height: 25px;
         text-decoration: none;
         .fa-instagram {
           font-size: 20px;
@@ -51,12 +40,8 @@
       }
       .instagram-a {
         @include wh(70px, 30px);
-        // width: 70px;
-        // height: 30px;
         #instagram {
           @include wh(100%, 100%);
-          // width: 100%;
-          // height: 100%;
         }
       }
     }
@@ -65,14 +50,10 @@
 
 #input-container {
   @include wh(170px, 25px);
-  // width: 170px;
-  // height: 25px;
   border: 1px solid #fafafa;
   border-radius: 3px;
   #input {
     @include wh(100%, 100%);
-    // width: 100%;
-    // height: 100%;
     padding-left: 5px;
     color: darkgrey;
   }
@@ -89,13 +70,7 @@
 
 #icon-container {
   @include wh(100px, 100%);
-  // width: 100px;
-  // height: 100%;
   @include flex(row, space-between);
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: space-between;
-  // align-items: center;
 }
 
 .nav-icon {
@@ -105,43 +80,23 @@
 
 #jinsoo-main {
   @include flex(row, center, flex-start);
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: flex-end;
-  // align-items: flex-start;
   margin: 45px 85px;
   @include wh(100%, 100%);
 
   #feeds-container {
     max-width: 615px;
     width: 100%;
-    // width: 450px;
-    // height: 100%;
     border: 1px solid lightgrey;
     .feeds {
       @include flex(column, stretch, stretch);
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: stretch;
-      // align-items: stretch;
       #owner {
         height: 40px;
         background-color: white;
         @include flex(row, space-between);
-        // display: flex;
-        // flex-direction: row;
-        // align-items: center;
-        // justify-content: space-between;
         #profile-container {
           @include wh(100px, 20px);
-          // width: 100px;
-          // height: 20px;
           margin-left: 6px;
           @include flex(row, space-between);
-          // display: flex;
-          // flex-direction: row;
-          // justify-content: space-between;
-          // align-items: center;
           text-decoration: none;
         }
         #more {
@@ -156,8 +111,6 @@
 
 .circle-icon {
   @include wh(25px, 25px);
-  // width: 25px;
-  // height: 25px;
   border: 0.1px solid lightgrey;
   border-radius: 50px;
   object-fit: cover;
@@ -173,29 +126,19 @@
 
 #picture-container {
   @include wh(100.25%, 100%);
-  // height: 446px;
-  // width: 100.25%;
   #picture {
     @include wh(100%, 100%);
-    // width: 100%;
-    // height: 100%;
     object-fit: cover;
   }
 }
 
 #contents-container {
-  /* height: 100%; */
-  /* width: 100%; */
   background-color: white;
   padding: 0 5px;
   #contents-icons {
     height: 30px;
     background-color: white;
     @include flex(row, space-between);
-    // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: space-between;
     margin-top: 3px;
     padding: 0 5px;
   }
@@ -203,23 +146,11 @@
 
 #left-icons {
   @include wh(75px, 100%);
-  // height: 100%;
-  // width: 75px;
-  @include flex(row, space-between) // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: space-between;
-;
+  @include flex(row, space-between);
 }
 
 #likes {
   @include flex(row, left);
-  // display: flex;
-  // flex-direction: row;
-  // align-items: center;
-  // justify-content: left;
-  /* height: 28px; */
-  /* padding-bottom: 8px; */
   #likes-icon {
     margin-left: 5px;
   }
@@ -232,26 +163,13 @@
 
 .small-icon {
   @include wh(17px, 17px);
-  // height: 17px;
-  // width: 17px;
 }
 
 #reply {
-  /* width: 100%; */
-  /* height: 40px; */
   @include flex(column, center, none);
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
   .reply-owner {
     @include wh(100%, 20px);
-    // width: 100%;
-    // height: 20px;
     @include flex(row, left);
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: left;
-    // align-items: center;
     #more-button {
       font-size: 3px;
       color: grey;
@@ -261,46 +179,29 @@
 
 .reply-friends {
   position: relative;
-  bottom: 3px;
-  /* width: 100%; */
-  /* height: 20px; */
   @include flex(row, space-between);
-  // display: flex;
-  // flex-direction: row;
-  // align-items: center;
-  // justify-content: space-between;
   .reply-left {
     @include flex(row, left);
-    // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: left;
   }
   #white-heart {
     @include wh(10px, 10px);
-    // width: 10px;
-    // height: 10px;
     margin-right: 5px;
   }
 }
 
 .minutes-before {
   height: 20px;
-  margin-left: 5px;
+  margin: 3px 0 0 5px;
   color: grey;
   font-size: 3px;
 }
 
 #reply-container {
-  // height: 100%;
   border-top: 1px solid lightgrey;
-  // border-bottom: 1px solid lightgrey;
   background-color: white;
   .input-reply {
     margin-left: 7px;
     @include wh(91%, 95%);
-    // width: 91%;
-    // height: 95%;
     font-size: 10px;
     border: 0;
     height: 30px;
@@ -328,20 +229,12 @@
 #aside {
   margin: 0 15px;
   @include wh(180px, 350px);
-  // width: 180px;
-  // height: 350px;
   .top {
     @include flex(row, space-between);
-    // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: space-between;
     height: 35px;
     margin-bottom: 10px;
     .top-icon {
       @include wh(35px, 35px);
-      // height: 35px;
-      // width: 35px;
     }
     .top-names {
       font-size: 3px;
@@ -358,17 +251,10 @@
   background-color: white;
   height: 153px;
   @include flex(column, none, stretch);
-  // display: flex;
-  // flex-direction: column;
-  // align-items: stretch;
   border: 1px solid grey;
   overflow: hidden;
   .story-top {
     @include flex(row, space-between);
-    // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: space-between;
     font-size: 10px;
     font-weight: bold;
     padding: 10px 10px 0 10px;
@@ -381,16 +267,11 @@
     }
   }
   .story-bot {
-    /* display: block; */
     padding: 0 5px;
     height: 100%;
     .story-feed {
       margin-top: 5px;
       @include flex(row, left);
-      // display: flex;
-      // flex-direction: row;
-      // justify-content: left;
-      // align-items: center;
       .story-feed-right {
         margin-left: 5px;
         margin-top: 3px;
