--- a/src/pages/sujeonglee/Main/main-sujeong.scss
+++ b/src/pages/sujeonglee/Main/main-sujeong.scss
@@ -33,7 +33,7 @@ $theme-color: #fff;
   font-size: 16px;
 }
 
-#containerColor {
+.containerColor {
   background-color: #fafafa;
   //main
   .mainContainer {
